--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
 BOT_NAME= "NEXUS-AI"
 IMAGE_MENU= "https://i.imgur.com/hk3vZ9W.jpeg"
-NUMERO_OWNER= "254785392165"
-OWNER_NAME= "Pkdriller"
+NUMERO_OWNER="2347046970033"
+OWNER_NAME= "SIMEON"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
